Added collections support for Hibernate Enricher Added collections support for enum prototypes Better support for mixIn enums. Improved types discovery. Improved discovery of generated types.